# kommunale_investeringer_app

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.devcontainer/: devcontainer.json
.github/workflows/: main_kommunale-investeringer.yml
utils/: plots.py
webapp/: Forside.py  style.css
webapp/pages/: Avanceret søgning.py  Baggrundsinfo og citater.py  Før du publicerer.py  Information og citater.py  Klasulering og kildeangivelse.py  Klausulering og kildeangivelse.py  Mulige historier.py  Mulige kilder og citater.py  Mulige kilder.py  Publicerede artikler.py  Reglerne for investering.py  Reglerne på området.py  Sådan har vi gjort.py  Søg i databasen.py  Søg videre.py  Top-10 lister.py
webapp/pages_dont_show/: Avanceret søgning.py  Sådan har vi gjort.py
webapp/utils/: data_processing.py  plots.py
